	 (Stuart Brady).
20040325 event.c,ui/uijoystick.[ch]: make the libjsw code use the new
	 input layer.
20040325 ui/uijoystick.c: fix up the 'no joystick' code for the new input
	 layer.
20040327 input.[ch], rzx.c, ui/uijoystick.c, ui/sdl/sdljoystick.c: make
	 the 'real joystick' code actually use the input layer.
20040328 compat.h,configure.in,compat/{Makefile.am,dirname.c}: add dirname
	 replacement.
20040329 fuse.c,settings.dat,sound.[ch],man/fuse.1,sound/osssound.c,
	 ui/options.dat: full 16-bit sound code (Rus).
20040329 ui/sdl/sdljoystick.c: compilation fixes.
20040329 sound/sdlsound.c: change to 16-bit sound.
20040329 sound/sdlsound.c: make 8-bit sound work again.
20040331 Move the machine-specific files into the machines/ directory.
20040331 widget/{menu.c,menu_data.c}: fix up for the machines/ changes.
20040331 ui/gtk/gtkjoystick.c: improve user interface.
20040401 ui/gtk/{gtkinternals.h,gtkjoystick.c,gtkui.c},widget/{Makefile.am,
	 joystick.c,menu_data.c,widget.c,widget.h,widget_internals.h}:
	 add widget code to select joysticks and match up the GTK+
	 interface.
20040401 input.c,joystick.[ch],widget/{Makefile.am,joystick.c,menu.c,
	 menu_data.c,scaler.c,select.c,widget.[ch],widget_internals.h}:
	 replace the three 'select' widgets (machine, scaler, joystick)
	 with one generalised one.
20040401 machine.c,machines/: general tidy-up of the machines/ directory.
20040401 machine.c,settings.dat,machines/{Makefile.am,machines.h,
	 specplus3.[ch],specplus3e.c}: Spectrum +3e support.
20040402 machines/specplus3e.c: make the +3e be a +3e not a +3.
20040402 tape.c: use libspectrum_tape_write().
20040402 display,c,machine.c,machines/,memory.h,spectrum.c: remove use of
	 the read_screen_memory function.
20040403 widget/roms.c: Fix ROM name lookup for labels
20040403 widget/select.c: Add <string.h> for strlen
20040403 ui/sdl/sdldisplay.c: Fix icon overlays for timex machines
20040403 ui.c: Add <string.h> for strncpy and strcmp