@@ -47,8 +47,6 @@ int specplus2_init( fuse_machine_info *machine )
 
   machine->reset = specplus2_reset;
 
-  error = machine_set_timings( machine ); if( error ) return error;
-
   machine->timex = 0;
   machine->ram.contend_port	     = spec128_contend_port;
   machine->ram.contend_delay	     = spec128_contend_delay;
