@@ -44,8 +44,6 @@ specplus3e_init( fuse_machine_info *machine )
 
   machine->reset = specplus3e_reset;
 
-  error = machine_set_timings( machine ); if( error ) return error;
-
   machine->timex = 0;
   machine->ram.contend_port	     = specplus3_contend_port;
   machine->ram.contend_delay	     = specplus3_contend_delay;
