@@ -130,8 +130,6 @@ int tc2048_init( fuse_machine_info *machine )
 
   machine->reset = tc2048_reset;
 
-  error = machine_set_timings( machine ); if( error ) return error;
-
   machine->timex = 1;
   machine->ram.contend_port	     = tc2048_contend_port;
   machine->ram.contend_delay	     = tc2048_contend_delay;
